# telegram-gifts-cases

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/queries/: first_rows.py
migrations/queries/ddl/: __init__.py  updated_at.py
migrations/versions/: 2025_11_15_0711-9d48f7f1561c_create_schema_core.py  2025_11_15_0811-feb115297fc8_create_non_table_schema_items.py  2025_11_16_2315-751bdc2406af_admins_and_sessions.py  2025_11_16_2322-1cd355259908_insert_first_rows.py  2025_11_23_0450-639a90953d4b_users.py
scripts/: run.sh
src/: exception_handlers.py  main.py  utils.py
src/adapters/: broker.py  redis.py
src/core/: config.py
src/core/db/: mixins.py  session.py
src/core/dto/: base.py
src/core/schemas/: errors.py
src/dependencies/: admin.py  db.py  user.py
src/domain/: admin.py  base.py  user.py  validation.py
src/domain/constants/: admin.py  api.py
src/exceptions/http/: base.py
src/models/: __init__.py  admin.py  base.py  user.py
src/queries/: admin.py  base.py  user.py
src/repositories/: admin.py  base.py  user.py
src/routers/: __init__.py  admins.py  auth.py  user.py
src/schemas/: admin.py  base.py
src/services/: admin.py  base.py  user.py
src/telegram/: app.py  loader.py
src/telegram/routers/: main.py
src/ws/: app.py
src/ws/managers/: __init__.py
supervisor/: supervisord.conf
